--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<table id="techTable" border="1" class="indent">
+<table id="shop" border="1" class="indent">
     <thead>
         <tr>
             <th>Select</th>
@@ -9,93 +9,76 @@
     </thead>
     <tbody>
         <tr>
-            <td colspan="3">Computers</td>
+            <td colspan="3">Perfumes</td>
         </tr>
         <tr id="1" sales="false">
             <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Laptop
-            <td align="right">3000.00</td>
-        </tr>
-        <tr id="2" sales="false">
-            <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Desktop
-            <td align="right">4500.00</td>
-        </tr>
-        <tr id="3" sales="true">
-            <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Phone
-            <td align="right">1500.00</td>
-        </tr>
-        <tr>
-            <td colspan="3">TVs</td>
-        </tr>
-        <tr id="1" sales="false">
-            <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Digital
-            <td align="right">1300.00</td>
-        </tr>
-        <tr id="2" sales="false">
-            <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Projector <td align="right">200.00</td>
-        </tr>
-        <tr id="3" sales="true">
-            <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Stand
+            <td /> Carolina Herrera
             <td align="right">150.00</td>
         </tr>
-        <tr>
-            <td colspan="3">Cameras</td>
-        </tr>
-        <tr id="1" sales="false">
-            <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Digital
-            <td align="right">260.00</td>
-        </tr>
         <tr id="2" sales="false">
             <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Superzoom
-            <td align="right">570.00</td>
+            <td /> Dior
+            <td align="right">130.00</td>
         </tr>
         <tr id="3" sales="true">
             <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Instant
-            <td align="right">70.00</td>
+            <td /> Calvin Klein
+            <td align="right">80.00</td>
         </tr>
         <tr>
-            <td colspan="3">Gaming</td>
+            <td colspan="3">Wine</td>
         </tr>
         <tr id="1" sales="false">
             <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Console
-            <td align="right">400.00</td>
+            <td /> Cabernet Sauvignon
+            <td align="right">30.00</td>
         </tr>
         <tr id="2" sales="false">
             <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Virtual Reality
-            <td align="right">290.00</td>
+            <td /> Pinot Grigio <td align="right">25.00</td>
         </tr>
         <tr id="3" sales="true">
             <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> PC
-            <td align="right">1600.00</td>
+            <td /> Pinot Noir
+            <td align="right">40.00</td>
         </tr>
         <tr>
-            <td colspan="3">Smart</td>
+            <td colspan="3">Jackets</td>
         </tr>
         <tr id="1" sales="false">
             <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Watch
+            <td /> The North Face
             <td align="right">200.00</td>
         </tr>
         <tr id="2" sales="false">
             <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Assistent
-            <td align="right">55.00</td>
+            <td /> Regatta
+            <td align="right">130.00</td>
         </tr>
         <tr id="3" sales="true">
             <td align="center"><input name="product0" type="checkbox" /></td>
-            <td /> Drones
-            <td align="right">90.00</td>
+            <td /> Tommy Hilfiger
+            <td align="right">250.00</td>
         </tr>
+        <tr>
+            <td colspan="3">Tvs</td>
+        </tr>
+        <tr id="1" sales="false">
+            <td align="center"><input name="product0" type="checkbox" /></td>
+            <td /> 42"
+            <td align="right">300.00</td>
+        </tr>
+        <tr id="2" sales="false">
+            <td align="center"><input name="product0" type="checkbox" /></td>
+            <td /> 32"
+            <td align="right">250.00</td>
+        </tr>
+        <tr id="3" sales="true">
+            <td align="center"><input name="product0" type="checkbox" /></td>
+            <td /> 40"
+            <td align="right">280.00</td>
+        </tr>
+        <tr>
     </tbody>
 </table>
